# mlx

./: AGENTS.md  CMakeLists.txt  build-venv.sh
mlx/: CMakeLists.txt  array.cpp  fast.h  primitives.cpp  random.cpp
mlx/backend/common/: broadcasting.cpp  copy.h
mlx/backend/vulkan/: CMakeLists.txt  allocator.cpp  allocator.h  arange.cpp  binary.cpp  compiled.cpp  conv.cpp  copy.cpp  device.cpp  device.h  device_info.cpp  device_info.h  eval.cpp  event.cpp  fast.cpp  fence.cpp  fft.cpp  gather.cpp  kernels.cpp  kernels.h  matmul.cpp  matmul.h  no_vulkan.cpp  primitives.cpp  primitives_utils.cpp  primitives_utils.h  quantized.cpp  quantized.h  random.cpp  reduce.cpp  rope.cpp  scan.cpp  scatter.cpp  shader_compiler.cpp  shader_compiler.h  softmax.cpp  unary.cpp  vulkan.cpp  vulkan.h  vulkan_api.h
mlx/backend/vulkan/kernels/: abs.comp  add.comp  arange.comp  arange_int.comp  argmax.comp  argsort.comp  argsort_large.comp  argsort_partition.comp  conj_c64.comp  conv2d_dw.comp  conv2d_mm.comp  cumprod.comp  cumsum.comp  dequant_nvfp4.comp  diag_mask_inf.comp  div.comp  fft.comp  fft_four_step_c64.comp  fill.comp  flash_attn.comp  flash_attn_cm1.comp  flash_attn_mask_opt.comp  gather_axis.comp  gather_mm_affine.comp  gather_mv_affine8.comp  gather_mv_affine8_smallk.comp  gather_pair.comp  gather_take.comp  hadamard.comp  integer_rows.comp  layer_norm_affine.comp  log1p.comp  masked_scatter.comp  max_rows.comp  maximum.comp  min_rows.comp  minimum.comp  mul.comp  mul_mat_split_k_reduce.comp  mul_mat_vec.comp  (+33 more)
python/src/: CMakeLists.txt  fast.cpp  mlx.cpp  vulkan.cpp
python/tests/: mlx_tests.py  test_fast.py  test_fast_sdpa.py  test_vulkan_ops.py
tests/: CMakeLists.txt  allocator_tests.cpp  device_tests.cpp  gpu_tests.cpp  vulkan_multi_queue_tests.cpp  vulkan_regression_tests.cpp
